{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "dbdc4ddb-1393-4bc4-9a45-e9b9fce224aa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fd882784-d974-45eb-bd9c-ecff6239c2d1",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryDrag",
                    "type": "Button",
                    "id": "cdd42cf6-beb3-4e33-918f-7ef9a3a9ced0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryClick",
                    "type": "Button",
                    "id": "38c8fd39-fbdd-4c3b-8f90-1be0c2e965a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryClick",
                    "type": "Button",
                    "id": "bb47d377-634e-496a-97b8-cfd68df2237e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Vault",
                    "type": "Button",
                    "id": "62c85fa1-4667-4c73-bc1d-9c33ceca0bd1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "32835e6a-048d-48eb-b5eb-9070a77c500f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "6dd82aa5-3d84-42e5-8bea-d407f235f6d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "e963f157-1c7e-4886-829f-14365915e529",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "0ffbdf53-791d-44cb-a1ae-35cb50be70e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "111d96df-02ae-461c-b1d1-cd2a72f068b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlotOne",
                    "type": "Button",
                    "id": "cbd521fa-30e3-4aaf-b4cd-0242ba25d8fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlotTwo",
                    "type": "Button",
                    "id": "44cf029c-6994-4f6b-a7a9-85ce9e8d68a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlotThree",
                    "type": "Button",
                    "id": "a2fbf6e5-a722-4f88-b7f3-c399aa0a09ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "aa4ae646-c608-440d-bebd-5c23160726c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "ffed9bc3-b747-42aa-bf1d-f0f24ce24105",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireMode",
                    "type": "Button",
                    "id": "6f247803-7aca-4945-889c-5bdab683ef18",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "18a3d724-e87b-47a8-a78f-97470a15dc0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "990a45fe-c2f0-46b3-b3f4-812c1074b7ab",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3bf16bfc-00a5-4ed2-9809-7a86d5c52851",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e1689350-24b3-4413-9627-f18b78bbe066",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "adf924bc-b911-4184-b122-edd733d30616",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "32c5c117-5c73-43f1-a83b-b6ab94813c71",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0513d025-f1dc-496d-8876-65077b1b2dcf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e148cfd6-130d-4c0b-8033-fcc4da5384ca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "904a9f03-a79c-417f-896a-d13ceaf56e6c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27f10663-f984-472b-b6a8-6847cb6d50a4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c4eaac4-ec8d-42c8-b2bc-4fc3ed648f55",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vault",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fbab7ab-476d-45a1-8671-3952cc403d91",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vault",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e283780c-1171-45f3-958a-131684b1fde2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29d32fcc-1502-4eb0-8a5d-cf90cd377874",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "164cb8d3-3a24-4904-8174-5b6cef741471",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ec0c9f6-727c-443f-9667-cc0d7ba20bf1",
                    "path": "<Keyboard>/r",
                    "interactions": "Press(pressPoint=0.5,behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e0e4d48-78af-4f56-9f37-2fc17dd93d03",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17a1932f-1dcf-4836-b4ec-ad92a85dcd50",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlotOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34be2b2b-7d67-4d6e-9ddc-faedffdf9f40",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlotTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99a2aeb9-3a76-4503-b046-b0db484c3078",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8781c159-713d-4c8a-977c-ac0a16e6f70f",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd8e5e1c-f007-4ebc-8b79-2f969159d3da",
                    "path": "<Keyboard>/#(B)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec023f0a-2dc3-4b4e-a82e-b074a7c6f384",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlotThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9be9497-6493-4499-9d03-7138a861e114",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "18e8ee86-dd9e-4e40-805c-bed22193e9b1",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "e482085e-1cf4-4e39-956b-eb25e1a96ed1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "db1e043b-d0a4-4b0f-950d-c4d2c88a7343",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "fb706be7-f26c-4d93-b6db-d7086cd805af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "6e684f40-dd7e-4977-bcde-167039565dac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "7ecda820-a1b0-4d5a-804c-2ed37870b419",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "14f70762-4cf4-431f-8296-7bf33198f924",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "58d50698-9c6f-4270-b1e9-b4c777ab721c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "89957b32-e700-4dff-b7f9-179a27a8f329",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tracked Device Position",
                    "type": "PassThrough",
                    "id": "770acf44-c87b-447d-8f42-2a43f781a365",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tracked Device Orientation",
                    "type": "PassThrough",
                    "id": "4f2ea2e8-58ff-418e-8650-af855ebc4bcd",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cde37dc4-fe6b-4634-8493-ec0fb1e88cdb",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "152cbb5e-27fb-4531-b244-da26ab68bae3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73fbea61-4b4b-4d24-9e81-65b480fd076b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d1f9b17-eec5-469c-838b-6948fd57fc7f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc591c43-c04f-4adf-9167-d92353fdcc24",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0796375-7f85-4534-b9e1-b9d498cc70bf",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "341a6c80-4ea6-4423-8426-ef787d4a3152",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14e1c97a-ef12-43a5-97c8-a3b0e6705fc8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba70f902-50f9-472d-be00-6d4492ed4196",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tracked Device Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f06e4b30-4013-43f1-a988-f7f43fd68939",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tracked Device Orientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}